--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "antd": "^4.20.3",
     "bootstrap": "^5.1.3",
     "moment": "^2.29.3",
+    "prop-types": "^15.8.1",
+    "rc-queue-anim": "^2.0.0",
+    "rc-tween-one": "^3.0.6",
     "react": "^18.1.0",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^18.1.0",
+    "react-drag-listview": "^0.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
